--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Design for Small Businesses | South East London | Sybiltec</title>       
+        <title>Web Design for SMEs | Bexley, South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Web Design for Small Businesses | South East London | Sybiltec" />
+        <meta property="og:title" content="Web Design for SMEs | Bexley, South East London | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation." />
         <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltec" />
@@ -62,22 +62,9 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <div class="dropdown">
-                                            <button onclick="toggleDropdown()" class="dropbtn">Services 
-                                                <i class="fa-solid fa-angle-down"></i>
-                                            </button>
-                                            <div id="myDropdown" class="dropdown-content">
-                                              <a href="https://sybiltec.com/website-review">Website Review</a>
-                                              <a href="https://sybiltec.com/website-design">Website Design</a>
-                                              <a href="https://sybiltec.com/website-development">Website Development</a>
-                                              <a href="https://sybiltec.com/website-maintenance">Website Maintenance</a>
-                                              <a href="https://sybiltec.com/training">Training</a>
-                                              <a href="https://sybiltec.com/leaflet-design">Leaflet Design</a>
-                                            </div>
-                                          </div> 
+                                        <a href="https://sybiltec.com/services">Services</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/about">About Me</a>
-                                        <a href="https://sybiltec.com/projects">Projects</a>   
+                                        <a href="https://sybiltec.com/about">About</a>
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
                                         <a href="https://sybiltec.com/blog">Blog</a>
                                         <a href="https://sybiltec.com/contact">Contact</a>
@@ -109,17 +96,8 @@
                 <h2 class="center">Website Services</h2>
                 <hr>
                 <p class="center">Whether you're looking for help with setting up a website for the first time, or you have an existing site that you want to optimise, I offer a service that's right for you.</p>
+
                 <div class="row">
-                    <div class="col-4">
-                        <div class="offer-card center">
-                            <i class="fas fa-clipboard-check"></i>
-                        <h3>Website Review</h3>
-                        <p>A detailed report with feedback on the main aspects of your site's user experience, search engine optimisation (SEO) and design. Recommended improvements are provided.</p>
-                        <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/website-review">Website Review</a>   
-                        </div>
-                        </div>
-                    </div>
                     <div class="col-4">
                         <div class="offer-card center">
                             <i class="fa-solid fa-laptop"></i>
@@ -140,18 +118,6 @@
                         </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-4">
-                        <div class="offer-card center">
-                            <i class="fas fa-code"></i>
-                    <h3>Website Development</h3>
-                    <p>Bespoke website development services tailored to your needs, including one-off tasks, design improvements and error fixing. Perfect for when you need support on an ad-hoc basis.</p>
-                    <div class="center padding-bottom padding-top">
-                        <a class="btn-primary" href="https://sybiltec.com/website-development">Web Development</a>   
-                    </div>
-                    </div>
-                    </div>
                     <div class="col-4">
                         <div class="offer-card center">
                             <i class="fas fa-tools"></i>
@@ -162,16 +128,9 @@
                         </div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="offer-card center">
-                            <i class="fa-solid fa-graduation-cap"></i>
-                        <h3>Training</h3>
-                        <p>Do you need a facilitator for your training event? I can host webinars or in-person workshops on topics ranging from getting your business online to setting up a Shopify store.</p>
-                        <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/training">Training</a>   
-                        </div>
-                        </div>
-                    </div>
+                </div>
+                <div class="center padding-bottom padding-top">
+                    <a class="btn-primary" href="https://sybiltec.com/services">See All Services</a>   
                 </div>
             </div>
         </div>
