--- a/sitemap.html
+++ b/sitemap.html
@@ -51,22 +51,9 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <div class="dropdown">
-                                            <button onclick="toggleDropdown()" class="dropbtn">Services 
-                                                <i class="fa-solid fa-angle-down"></i>
-                                            </button>
-                                            <div id="myDropdown" class="dropdown-content">
-                                              <a href="https://sybiltec.com/website-review">Website Review</a>
-                                              <a href="https://sybiltec.com/website-design">Website Design</a>
-                                              <a href="https://sybiltec.com/website-development">Website Development</a>
-                                              <a href="https://sybiltec.com/website-maintenance">Website Maintenance</a>
-                                              <a href="https://sybiltec.com/training">Training</a>
-                                              <a href="https://sybiltec.com/leaflet-design">Leaflet Design</a>
-                                            </div>
-                                          </div> 
+                                        <a href="https://sybiltec.com/services">Services</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/about">About Me</a>
-                                        <a href="https://sybiltec.com/projects">Projects</a>   
+                                        <a href="https://sybiltec.com/about">About</a>
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
                                         <a href="https://sybiltec.com/blog">Blog</a>
                                         <a href="https://sybiltec.com/contact">Contact</a>
@@ -88,7 +75,7 @@
             <div class="container-1140">
                 <h2>Main</h2>
                 <ul>
-                    <li><a href="https://sybiltec.com/about">About Me</a></li>
+                    <li><a href="https://sybiltec.com/about">About</a></li>
                     <li><a href="https://sybiltec.com/blog">Blog Page 1</a></li>
                     <li><a href="https://sybiltec.com/blog-2">Blog Page 2</a></li>
                     <li><a href="https://sybiltec.com/clients">Clients</a></li>
@@ -97,6 +84,7 @@
                     <li><a href="https://sybiltec.com/">Home</a></li>
                     <li><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></li>
                     <li><a href="https://sybiltec.com/projects">Projects</a></li>
+                    <li><a href="https://sybiltec.com/services">Services</a></li>
                     <li><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></li>
                 </ul>
                 <h2>Services</h2>
