--- a/about.html
+++ b/about.html
@@ -53,22 +53,9 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <div class="dropdown">
-                                            <button onclick="toggleDropdown()" class="dropbtn">Services 
-                                                <i class="fa-solid fa-angle-down"></i>
-                                            </button>
-                                            <div id="myDropdown" class="dropdown-content">
-                                              <a href="https://sybiltec.com/website-review">Website Review</a>
-                                              <a href="https://sybiltec.com/website-design">Website Design</a>
-                                              <a href="https://sybiltec.com/website-development">Website Development</a>
-                                              <a href="https://sybiltec.com/website-maintenance">Website Maintenance</a>
-                                              <a href="https://sybiltec.com/training">Training</a>
-                                              <a href="https://sybiltec.com/leaflet-design">Leaflet Design</a>
-                                            </div>
-                                          </div> 
+                                        <a href="https://sybiltec.com/services">Services</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/about">About Me</a>
-                                        <a href="https://sybiltec.com/projects">Projects</a>   
+                                        <a href="https://sybiltec.com/about">About</a>
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
                                         <a href="https://sybiltec.com/blog">Blog</a>
                                         <a href="https://sybiltec.com/contact">Contact</a>
