--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 </div>
             </div>
         </div>
-        <div class="certifications section">
+        <!-- <div class="certifications section">
             <div class="container-1140">
                 <h2>Certifications</h2>
                 <hr>
@@ -404,7 +404,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div id="map"></div>
         <div class="contact section">
             <div class="container-1140">
