--- a/about.html
+++ b/about.html
@@ -77,7 +77,98 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <div class="row center">
+                <h2>About Sybil</h2>
+                <hr class="left-align">
+
+                <p>Thank you for visiting my website. My name is Sybil Mayard. I founded Sybiltec in 2020 with a mission to make web design and development services more accessible and affordable to all, especially small businesses. Four years later, I'm proud to say that I've worked with several SMEs from various industry sectors to help them achieve their digital goals. My main services include websites for small businesses, <a href="https://sybiltec.com/ecommerce-websites">e-commerce websites</a>, and online learning platforms.</p>
+
+                <p>Current clients include the <a href="https://techdiplomacy.org" target="_blank" rel="noreferrer noopener">Krach Institute for Tech Diplomacy at Purdue</a>, where I am involved in designing and building an online portal for the new Tech Diplomacy Academy project which will be launching soon. I am also pleased to be working together with CNT Associates to deliver the <a href="https://sybiltec.com/bexley-talking-business">Bexley Talking Business</a> programme in association with the London Borough of Bexley and fully funded by the UK Shared Prosperity Fund.</p>
+
+                <p>I graduated in November 2019 from the University of Kent with a Distinction in MSc Computer Science. Previous roles include:</p>
+                <ul>
+                    <li>QA Engineer at Esme Learning and Riff Analytics</li>
+                    <li>Web Manager at Esme Learning</li>
+                    <li>Junior Analyst at Capacitas</li>
+                </ul>
+
+                <p>I am also the founder of VidCareer. It's a start-up idea which began during my Masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money. For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects" rel="noopener noreferrer">Projects</a> page.</p>
+
+                <p>Click the button below to find out how I can help take your business to the next level.</p>
+                
+                <div class="padding-top padding-bottom">
+                    <a href="https://sybiltec.com/contact" target="_blank" class="btn-primary">Contact me</a>
+                </div>
+
+                <div class="center">
+                    <h2>Values</h2>
+                        <hr>
+                    <div class="row">
+                        <div class="col-2"><i class="fa-regular fa-circle-check"></i><p><strong>Committed to Succeed</strong></p></div>
+                        <div class="col-2"><i class="fa-solid fa-people-group"></i><p><strong>Working Together</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-handshake"></i><p><strong>Keeping My Promises</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-comments"></i><p><strong>Regular Communication</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-clock"></i><p><strong>Delivering on Time</strong></p></div>
+                        <div class="col-2"><i class="fa-solid fa-trophy"></i><p><strong>Exceeding Expectations</strong></p></div>
+                    </div>
+                </div>
+
+            <h2>The Team</h2>
+            <hr class="left-align">
+            <p>As a business owner, you are probably aware that having a beautiful website is only one aspect of your business. Have you thought about photography, brand planning, copywriting, social media, data protection, or raising funds? I am committed to delivering the highest quality services to my customers in Bexley and the surrounding areas, therefore, I work alongside other professionals in related fields to provide much more than just a web design service. My team of experts can help you make your project a breeze. By partnering with the most knowledgeable and experienced individuals, you can rest assured that your project is in good hands. We take a collaborative approach and will work together with you to elevate your online presence and help your business achieve its potential.</p>
+
+            <div class="row">
+                <div class="col-6">
+                    <p><img src="https://sybiltec.com/images/Sybil-Mayard.jpg" alt="Sybil Mayard's headshot"></p>
+                    <p><strong>Sybil Mayard, MSc - Founder</strong></p>
+                    <p>I am the Founder of Sybiltec, helping small business owners to improve their online presence through better web design. With my creativity and keen eye for detail, I craft visually appealing websites that perfectly reflect the businesses' brand and values. Notable clients include the Krach Institute for Tech Diplomacy at Purdue and Emrys Consulting.</p>
+                    <a href="https://www.linkedin.com/in/sybil-m/" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+                <div class="col-6">
+                    <p><img src="https://sybiltec.com/images/gary-parker.jpeg" alt="Gary Parker's headshot"></p>
+                    <p><strong>Gary Parker, BA (Hons) - Business Support and Fundraising Expert</strong></p>
+                    <p>Gary is the Managing Director of CNT Associates, a London-based business support and fundraising organisation. He has 20 years of experience in the field of fundraising and has worked on projects for significant organisations including the Jimmy Choo Fashion Academy, GLL and the London Borough of Bexley.</p>
+                    <a href="https://www.linkedin.com/in/gary-parker-cnt1/" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+            </div>
+
+                </div>
+            </div>
+
+            <div class="certifications section">
+                <div class="container-1140">
+                    <h2>Certifications</h2>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <h4>Foundations of User Experience (UX) Design</h4>
+                                <img src="https://sybiltec.com/images/certifications/foundations-of-user-experience-ux-design.png"
+                                    alt="Foundations of User Experience (UX) Design certificate">
+                        </div>
+                        <div class="col-3">
+                            <h4>The Fundamentals of Digital Marketing</h4>
+                                <img src="https://sybiltec.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
+                                    alt="Google Digital Garage The Fundamentals of Digital Marketing certificate">
+                        </div>
+                        <div class="col-3">
+                        <h4>Yoast Academy Certified</h4>
+                        <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
+                            target="_blank" rel="noopener noreferrer">
+                            <img src="https://sybiltec.com/images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
+                                alt="Yoast for Beginners certificate"></a>
+                        </div>
+                        <div class="col-3">
+                            <h4>The Complete 2022 Software Testing Bootcamp</h4>
+                                <img src="https://sybiltec.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpeg"
+                                    alt="Udemy The Complete 2022 Software Testing Bootcamp">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            </div>
+        </div>
+
+                <!-- <div class="row center">
                     <h2>A web designer and developer based in South East London</h2>
                     <div class="col-4">
                         <h3>Who I Am</h3>
@@ -94,77 +185,22 @@
                         <hr>
                         <p>I work together with small business owners and provide personalised services to suit their requirements.</p>
                     </div>
-                </div>
-                <div class="center">
-                    <h2>My Values</h2>
-                        <hr>
-                    <div class="row padding-top">
-                        <div class="col-2"><i class="fa-regular fa-circle-check"></i><p><strong>Committed to Succeed</strong></p></div>
-                        <div class="col-2"><i class="fa-solid fa-people-group"></i><p><strong>Working Together</strong></p></div>
-                        <div class="col-2"><i class="fa-regular fa-handshake"></i><p><strong>Keeping My Promises</strong></p></div>
-                        <div class="col-2"><i class="fa-regular fa-comments"></i><p><strong>Regular Communication</strong></p></div>
-                        <div class="col-2"><i class="fa-regular fa-clock"></i><p><strong>Delivering On Time</strong></p></div>
-                        <div class="col-2"><i class="fa-solid fa-trophy"></i><p><strong>Exceeding Expectations</strong></p></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-            <div class="events section grey">
-                <div class="container-1140">
-                    <h2>My Experience</h2>
-                    <hr class="left-align">
+                </div> -->
 
-                    <p>Hi there! My name is Sybil Mayard. I graduated in November 2019 from the University of Kent with a Distinction in MSc Computer Science. My goal is to establish myself as a freelance website designer and developer, and help small businesses develop their online presence. Services I offer include website design, website development, website maintenance, training and leaflet design.</p>
-
-                    <p>In my spare time I enjoy building websites such as this one 🙂.</p>
-
-                    <p>I previously worked as QA Engineer for both Esme Learning Solutions, a provider of professional development courses from top-tier universities powered by next-gen AI learning and Riff Analytics, the smart platform that improves teams' collaboration and communication skills. I worked closely with the IT department to ensure that essential systems function correctly by creating QA plans and carrying out rigorous testing on software and services. My previous role as Web Manager entailed maintaining the Shopify website and building landing pages.</p>
-
-                    <p>I am also the founder of VidCareer. It's a start-up idea which began during my Masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money.</p>
-
-                    <p>For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects" rel="noopener noreferrer">Projects</a> page.</p>
-
-                    <p>Prior to Esme Learning, I worked for Capacitas, a London-based IT consultancy specialising in load testing and performance testing of clients' websites. My role as a Junior Analyst involved scripting the user journey with Apache JMeter, running the load tests, analysing the results, then compiling a technical report for the client detailing the issues to be investigated.</p>
-
-                    <p>Click the button below to find out how I can help take your online business to the next level.</p>
-                    
-                    <div class="padding-top padding-bottom center">
-                        <a href="https://sybiltec.com/contact" target="_blank" class="btn-primary">Contact me</a>
-                    </div>
-                </div>
-            </div>
-            <div class="events section">
+            <div class="events section center">
                 <div class="container-1140">
                     <h2>Key Skills</h2>
-                    <hr class="left-align">
+                    <hr>
                     <div class="row center">
-                        <div class="col-3"><i class="far fa-calendar-alt"></i><h3 class="smaller">Acuity</h3></div>
-                        <div class="col-3"><i class="far fa-image"></i><h3 class="smaller">Adobe Photoshop</h3></div>
                         <div class="col-3"><i class="fa-solid fa-cart-shopping"></i><h3 class="smaller">BigCommerce</h3></div>
-                        <div class="col-3"><i class="fab fa-css3-alt"></i><h3 class="smaller">CSS</h3></div>
-                    </div>
-                    <div class="row center">
                         <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">Divi</h3></div>
                         <div class="col-3"><i class="fab fa-elementor"></i><h3 class="smaller">Elementor</h3></div>
                         <div class="col-3"><i class="fa-brands fa-figma"></i><h3 class="smaller">Figma</h3></div>
-                        <div class="col-3"><i class="fas fa-chart-line"></i><h3 class="smaller">Google Analytics</h3></div>
-                    </div>
-                    <div class="row center">
-                        <div class="col-3"><i class="fab fa-hotjar"></i><h3 class="smaller">Hotjar</h3></div>
-                        <div class="col-3"><i class="fas fa-code"></i><h3 class="smaller">HTML</h3></div>
-                        <div class="col-3"><i class="fab fa-hubspot"></i><h3 class="smaller">HubSpot</h3></div>
-                        <div class="col-3"><i class="fab fa-js"></i><h3 class="smaller">JavaScript</h3></div>
                     </div>
                     <div class="row center">
                         <div class="col-3"><i class="fa-solid fa-graduation-cap"></i><h3 class="smaller">LearnDash</h3></div>
-                        <div class="col-3"><i class="fab fa-mailchimp"></i><h3 class="smaller">Mailchimp</h3></div>
-                        <div class="col-3"><i class="far fa-envelope"></i><h3 class="smaller">MailerLite</h3></div>
-                        <div class="col-3"><i class="fab fa-php"></i><h3 class="smaller">PHP</h3></div>
-                    </div>
-                    <div class="row center">
                         <div class="col-3"><i class="fas fa-tools"></i><h3 class="smaller">Shogun</h3></div>
                         <div class="col-3"><i class="fab fa-shopify"></i><h3 class="smaller">Shopify</h3></div>
-                        <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">Tatsu</h3></div>
                         <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">Unbounce</h3></div>
                     </div>
                     <div class="row center">
