Various SEO improvements

--- a/blog.html
+++ b/blog.html
@@ -100,7 +100,7 @@
                     <h2>10 Common Website Mistakes and How to Avoid Them</h2>
                     <p>Having analysed a huge number of websites over the past few years, I've noticed that a few mistakes tend to appear again and again. Have a read of the following article and make sure you aren't making the same mistakes on your website. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/common-website-mistakes">Read More</a>
+                    <a class="btn-primary" href="https://sybiltec.com/common-website-mistakes">Avoid the Mistakes</a>
                 </div>
                 <div class="padding-top">
                     <h2>How to Choose a Web Designer</h2>
@@ -136,19 +136,19 @@
                     <h2>How to Install GA4 on Your WordPress Website</h2>
                     <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wordpress-website">Read More</a>
+                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wordpress-website">Install GA4 on WordPress</a>
                 </div>
                 <div class="padding-top">
                     <h2>How to Install GA4 on Your Wix Website</h2>
                     <p>Your website must be on a Wix Premium Plan in order to connect Google Analytics to it. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wix-website">Read More</a>
+                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wix-website">Install GA4 on Wix</a>
                 </div>
                 <div class="padding-top">
                     <h2>How to Install GA4 on Your Shopify Website</h2>
                     <p>You must remove password protection from your Shopify store in order to allow Google Analytics to track events. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-shopify-website">Read More</a>
+                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-shopify-website">Install GA4 on Shopify</a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2">Page 2</a></div>
             </div>
