--- a/blog-2.html
+++ b/blog-2.html
@@ -82,13 +82,13 @@
                     <h2>Shopify vs WooCommerce: What Are the Differences?</h2>
                     <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
                     <br>
-                <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce">Read More</a>
+                <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce">Shopify vs WooCommerce</a>
                 </div>
                 <div class="padding-top">
                     <h2>The Web Design Process Explained in 12 Easy Steps</h2>
                     <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps">Read More</a>
+                    <a class="btn-primary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process</a>
                 </div>
                 <div class="padding-top">
                     <h2>A Guide to Updating Your WordPress Website</h2>
@@ -100,43 +100,43 @@
                     <h2>Are You Inadvertently Abusing Your Customers' Data?</h2>
                     <p>Have you stopped to think about how you are using your customers' data? If not, then you probably don't have a privacy notice - a crucial document for creating a compliant and trustworthy website. In this blog article, we present to you a few areas to consider when creating your privacy notice. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">Read More</a>
+                    <a class="btn-primary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">Use Data Appropriately</a>
                 </div>
                 <div class="padding-top">
                     <h2>The Importance of Contact Information on Your Website</h2>
                     <p>Our recent LinkedIn poll found that allowing your customers to easily contact you via your website is the most important factor when creating a trustworthy website. Read on to find out why, and our advice on how to make your contact information more visible on your website. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/importance-of-contact-information-on-your-website">Read More</a>
+                    <a class="btn-primary" href="https://sybiltec.com/importance-of-contact-information-on-your-website">Review Your Contact Info</a>
                 </div>
                 <div class="padding-top">
                     <h2>How Does a Good Website Showcase Trust?</h2>
                     <p>According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
                     <br>
-                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust">Read More</a>
+                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust">Create a Trustworthy Website</a>
                 </div>
                 <div class="padding-top">
                     <h2>Cyber Security Best Practices for You and Your Business</h2>
                     <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. Click on any image a to view a larger version. …</p>
                     <br>
-                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Read More</a>
+                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Cyber Security Practices</a>
                 </div>
                 <div class="padding-top">
                     <h2>7 Reasons Why You Should be Using Shopify</h2>
                     <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
                         <br>
-                        <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify">Read More</a>
+                        <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify">Use Shopify Now</a>
                 </div>
                 <div class="padding-top">
                     <h2>5 Best Tools for Remote Working</h2>
                     <p>With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free. Of course, I can't go into …</p>
                         <br>
-                        <a class="btn-primary" href="https://sybiltec.com/5-best-tools-for-remote-working">Read More</a>
+                        <a class="btn-primary" href="https://sybiltec.com/5-best-tools-for-remote-working">Remote Working Tools</a>
                 </div>
                 <div class="padding-top padding-bottom">
                     <h2>6 Tips for Surviving Remote Working</h2>
                     <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively. Optimise Your Technology Get a reliable internet connection. If possible, use an …</p>
                         <br>
-                        <a class="btn-primary" href="https://sybiltec.com/6-tips-for-surviving-remote-working">Read More</a>
+                        <a class="btn-primary" href="https://sybiltec.com/6-tips-for-surviving-remote-working">Survive Remote Working</a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog">Page 1</a></div>
             </div>
