Add accessibility blog

--- a/blog-2.html
+++ b/blog-2.html
@@ -74,10 +74,34 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>How Do I Upgrade to Google Analytics 4?</h2>
-                <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The previous version, Universal Analytics, stopped processing new data on 1st July 2023, so you need to upgrade to GA4 if you have not yet done so. Not sure which version of Google …</p>
+                <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
+                <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
                 <br>
-                <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Upgrade GA Now</a>
+                <a class="btn-primary" href="https://sybiltec.com/fix-slow-wordpress-website">Fix My Site!</a>
+                <div class="padding-top">
+                    <h2>How to Install GA4 on Your WordPress Website</h2>
+                    <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wordpress-website">Install GA4 on WordPress</a>
+                </div>
+                <div class="padding-top">
+                    <h2>How to Install GA4 on Your Wix Website</h2>
+                    <p>Your website must be on a Wix Premium Plan in order to connect Google Analytics to it. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wix-website">Install GA4 on Wix</a>
+                </div>
+                <div class="padding-top">
+                    <h2>How to Install GA4 on Your Shopify Website</h2>
+                    <p>You must remove password protection from your Shopify store in order to allow Google Analytics to track events. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-shopify-website">Install GA4 on Shopify</a>
+                </div>
+                <div class="padding-top">
+                    <h2>How Do I Upgrade to Google Analytics 4?</h2>
+                    <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The previous version, Universal Analytics, stopped processing new data on 1st July 2023, so you need to upgrade to GA4 if you have not yet done so. Not sure which version of Google …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Upgrade GA Now</a>
+                </div>
                 <div class="padding-top">
                     <h2>Shopify vs WooCommerce: What Are the Differences?</h2>
                     <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
@@ -108,37 +132,7 @@
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/importance-of-contact-information-on-your-website">Review Your Contact Info</a>
                 </div>
-                <div class="padding-top">
-                    <h2>How Does a Good Website Showcase Trust?</h2>
-                    <p>According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
-                    <br>
-                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust">Create a Trustworthy Website</a>
-                </div>
-                <div class="padding-top">
-                    <h2>Cyber Security Best Practices for You and Your Business</h2>
-                    <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. Click on any image a to view a larger version. …</p>
-                    <br>
-                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Cyber Security Practices</a>
-                </div>
-                <div class="padding-top">
-                    <h2>7 Reasons Why You Should be Using Shopify</h2>
-                    <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
-                        <br>
-                        <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify">Use Shopify Now</a>
-                </div>
-                <div class="padding-top">
-                    <h2>5 Best Tools for Remote Working</h2>
-                    <p>With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free. Of course, I can't go into …</p>
-                        <br>
-                        <a class="btn-primary" href="https://sybiltec.com/5-best-tools-for-remote-working">Remote Working Tools</a>
-                </div>
-                <div class="padding-top padding-bottom">
-                    <h2>6 Tips for Surviving Remote Working</h2>
-                    <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively. Optimise Your Technology Get a reliable internet connection. If possible, use an …</p>
-                        <br>
-                        <a class="btn-primary" href="https://sybiltec.com/6-tips-for-surviving-remote-working">Survive Remote Working</a>
-                </div>
-                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog">Page 1</a></div>
+                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog">Page 1</a> | <a href="https://sybiltec.com/blog-3">Page 3</a></div>
             </div>
         </div>
         <div class="contact section">
