--- a/blog.html
+++ b/blog.html
@@ -74,10 +74,16 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>How to Use Google Search Console: a Quick Guide</h2>
-                <p>Improving your website's SEO begins with understanding the search performace of your site. Read this guide on how to create a property, view your metrics, fix page indexing issues and more. …</p>
+                <h2>Accessible Design: Creating an Inclusive Website</h2>
+                <p>Designing an accessible website means creating web content that's usable for all types of users, including those with impairments and disabilities. Read the article for simple tips on how to make your website more accessible …</p>
                 <br>
-                <a class="btn-primary" href="https://sybiltec.com/google-search-console">Read the Guide</a>
+                    <a class="btn-primary" href="https://sybiltec.com/accessible-website-design">Accessible Website Design</a>
+                <div class="padding-top">
+                    <h2>How to Use Google Search Console: a Quick Guide</h2>
+                    <p>Improving your website's SEO begins with understanding the search performace of your site. Read this guide on how to create a property, view your metrics, fix page indexing issues and more. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/google-search-console">Use Google Search Console</a>
+                </div>
                 <div class="padding-top">
                     <h2>Free Webinar: Building an Online Store Using Shopify</h2>
                     <p>If you are a business owner looking to sell products or services online, you will need an online store. In this free webinar, delivered in association with CNT Associates, we will cover how to develop a store with one of the most popular e-commerce platforms - Shopify …</p>
@@ -125,30 +131,6 @@
                     <p>Are you an SME or sole trader based in Bexley? Do you need help with running your business? If so, you may be eligible for free business support. Register now for the programme …</p>
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/bexley-talking-business">Get Business Support</a>
-                </div>
-                <div class="padding-top">
-                    <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
-                    <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/fix-slow-wordpress-website">Fix My Site!</a>
-                </div>
-                <div class="padding-top">
-                    <h2>How to Install GA4 on Your WordPress Website</h2>
-                    <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wordpress-website">Install GA4 on WordPress</a>
-                </div>
-                <div class="padding-top">
-                    <h2>How to Install GA4 on Your Wix Website</h2>
-                    <p>Your website must be on a Wix Premium Plan in order to connect Google Analytics to it. …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wix-website">Install GA4 on Wix</a>
-                </div>
-                <div class="padding-top">
-                    <h2>How to Install GA4 on Your Shopify Website</h2>
-                    <p>You must remove password protection from your Shopify store in order to allow Google Analytics to track events. …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-shopify-website">Install GA4 on Shopify</a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2">Page 2</a></div>
             </div>
