--- a/index.html
+++ b/index.html
@@ -304,6 +304,20 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">          
+                        <div class="blog-card">
+                            <a href="https://sybiltec.com/accessible-website-design"><img src="images/disabled-parking-350x183.jpg" 
+                                alt="Disabled parking"></a>  
+                            <div class="blog-card-text">               
+                                <h3>Accessible Website Design</h3>
+                                <p>10 March 2024</p>
+                                <p>Read the article for an introduction to accessibility and quick tips on how to create a website that caters to users with impairments and disabilities.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/accessible-website-design">Accessible Design</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4">  
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/google-search-console">
@@ -332,20 +346,6 @@
                                 </div>
                             </div>
                         </div> 
-                    </div>
-                    <div class="col-4">          
-                        <div class="blog-card">
-                            <a href="https://sybiltec.com/best-free-wordpress-plugins"><img src="images/wordpress-add-new-plugins-page.jpg" 
-                                alt="WordPress add new plugins page"></a>  
-                            <div class="blog-card-text">               
-                                <h3>10 Best Free WordPress Plugins</h3>
-                                <p>30 January 2024</p>
-                                <p>To extend the functionality of your WordPress site, you'll need to install a few plugins. Read this article to learn about the 10 most useful free plugins. </p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/best-free-wordpress-plugins">Best WordPress Plugins</a>   
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
