--- a/blog-3.html
+++ b/blog-3.html
@@ -12,14 +12,15 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sitemap | South East London Web Design | Sybiltec</title>       
-        <meta name="Description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website.">
+        <title>Blog Page 3 | Web Designer in Bexley, South East London</title>       
+        <meta name="Description" content="Sybiltec is a freelance web designer supporting small business owners in South East London. Read my articles for tips and advice on web design issues.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/blog-3">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Sitemap | South East London Web Design | Sybiltec" />
-        <meta property="og:description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website." />
-        <meta property="og:url" content="https://sybiltec.com/sitemap" />
+        <meta property="og:title" content="Blog Page 3 | Web Designer in Bexley, South East London" />
+        <meta property="og:description" content="Sybiltec is a freelance web designer supporting small business owners in South East London. Read my articles for tips and advice on web design issues." />
+        <meta property="og:url" content="https://sybiltec.com/blog-3" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -34,7 +35,6 @@
         <meta name="geo.placename" content="London" />
         <meta name="geo.position" content="51.495673;0.141465" />
         <meta name="ICBM" content="51.495673, 0.141465" />
-        <link rel="canonical" href="https://sybiltec.com/sitemap" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
@@ -68,64 +68,43 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Sitemap</h1>
+                <h1>Sybiltec's Blog Page 3</h1>
+                <h2>Keeping You Updated</h2>
             </div>
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>Main</h2>
-                <ul>
-                    <li><a href="https://sybiltec.com/about">About</a></li>
-                    <li><a href="https://sybiltec.com/blog">Blog Page 1</a></li>
-                    <li><a href="https://sybiltec.com/blog-2">Blog Page 2</a></li>
-                    <li><a href="https://sybiltec.com/blog-3">Blog Page 3</a></li>
-                    <li><a href="https://sybiltec.com/clients">Clients</a></li>
-                    <li><a href="https://sybiltec.com/contact">Contact</a></li>
-                    <li><a href="https://sybiltec.com/faqs">FAQs</a></li>
-                    <li><a href="https://sybiltec.com/">Home</a></li>
-                    <li><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></li>
-                    <li><a href="https://sybiltec.com/projects">Projects</a></li>
-                    <li><a href="https://sybiltec.com/services">Services</a></li>
-                    <li><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></li>
-                </ul>
-                <h2>Services</h2>
-                <ul>
-                    <li><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></li>
-                    <li><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></li>
-                    <li><a href="https://sybiltec.com/training">Training</a></li>
-                    <li><a href="https://sybiltec.com/website-design">Web Design</a></li>
-                    <li><a href="https://sybiltec.com/website-development">Web Development</a></li>
-                    <li><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></li>
-                    <li><a href="https://sybiltec.com/website-review">Website Review</a></li>
-                </ul>
-                <h2>Blog Posts</h2>
-                <ul>
-                    <li><a href="https://sybiltec.com/5-best-tools-for-remote-working">5 Best Tools for Remote Working</a></li>
-                    <li><a href="https://sybiltec.com/6-reasons-to-use-shopify">7 Reasons Why You Should be Using Shopify</a></li>
-                    <li><a href="https://sybiltec.com/best-free-wordpress-plugins">10 Best Free WordPress Plugins</a></li>
-                    <li><a href="https://sybiltec.com/common-website-mistakes">10 Common Website Mistakes and How to Avoid Them</a></li>
-                    <li><a href="https://sybiltec.com/fix-slow-wordpress-website">10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</a></li>
-                    <li><a href="https://sybiltec.com/guide-to-updating-your-wordpress-website">A Guide to Updating Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/accessible-website-design">Accessible Design: Creating an Inclusive Website</a></li>
-                    <li><a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">Are You Inadvertently Abusing Your Customers' Data?</a></li>
-                    <li><a href="https://sybiltec.com/bexley-talking-business">Bexley Talking Business</a></li>
-                    <li><a href="https://sybiltec.com/cyber-security-best-practices-for-business">Cyber Security Best Practices for You and Your Business</a></li>
-                    <li><a href="https://sybiltec.com/building-online-store-using-shopify">Free Webinar: Building an Online Store Using Shopify</a></li>
-                    <li><a href="https://sybiltec.com/digital-marketing-strategy">Free Webinar: Developing a Digital Marketing Strategy</a></li>
-                    <li><a href="https://sybiltec.com/how-does-a-good-website-showcase-trust">How Does a Good Website Showcase Trust?</a></li>
-                    <li><a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></li>
-                    <li><a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">How to Backup Your WordPress Website with UpdraftPlus</a></li>
-                    <li><a href="https://sybiltec.com/how-to-choose-web-designer">How to Choose a Web Designer</a></li>
-                    <li><a href="https://sybiltec.com/improve-website-seo">How to Improve the SEO of Your Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-shopify-website">How to Install GA4 on Your Shopify Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-wix-website">How to Install GA4 on Your Wix Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-wordpress-website">How to Install GA4 on Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/google-search-console">How to Use Google Search Console: a Quick Guide</a></li>
-                    <li><a href="https://sybiltec.com/6-tips-for-surviving-remote-working">Remote Working: How to Survive with 6 Tips</a></li>
-                    <li><a href="https://sybiltec.com/shopify-woocommerce">Shopify vs WooCommerce: What Are the Differences?</a></li>
-                    <li><a href="https://sybiltec.com/importance-of-contact-information-on-your-website">The Importance of Contact Information on Your Website</a></li>
-                    <li><a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a></li>   
-                </ul>
+                <div class="padding-top">
+                    <h2>How Does a Good Website Showcase Trust?</h2>
+                    <p>According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
+                    <br>
+                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust">Create a Trustworthy Website</a>
+                </div>
+                <div class="padding-top">
+                    <h2>Cyber Security Best Practices for You and Your Business</h2>
+                    <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. Click on any image a to view a larger version. …</p>
+                    <br>
+                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Cyber Security Practices</a>
+                </div>
+                <div class="padding-top">
+                    <h2>7 Reasons Why You Should be Using Shopify</h2>
+                    <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
+                        <br>
+                        <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify">Use Shopify Now</a>
+                </div>
+                <div class="padding-top">
+                    <h2>5 Best Tools for Remote Working</h2>
+                    <p>With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free. Of course, I can't go into …</p>
+                        <br>
+                        <a class="btn-primary" href="https://sybiltec.com/5-best-tools-for-remote-working">Remote Working Tools</a>
+                </div>
+                <div class="padding-top padding-bottom">
+                    <h2>6 Tips for Surviving Remote Working</h2>
+                    <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively. Optimise Your Technology Get a reliable internet connection. If possible, use an …</p>
+                        <br>
+                        <a class="btn-primary" href="https://sybiltec.com/6-tips-for-surviving-remote-working">Survive Remote Working</a>
+                </div>
+                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2">Page 2</a></div>
             </div>
         </div>
         <div class="contact section">
@@ -156,12 +135,12 @@
                     <div class="col-3">
                         <h4>Services</h4>
                         <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
+                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
                         <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-development">Web Development</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/training">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
