--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -262,7 +262,10 @@
                         </p>
                         <p>
                             <a href="https://www.uksmallbusinessdirectory.co.uk/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
-                        </p>                       
+                        </p> 
+                        <p>
+                            <a href="https://www.bexley.org.uk/web-designers/" rel="noopener noreferrer" target="_blank"><img alt="Bexley Web Designers" src="https://www.bexley.org.uk/Images/LinkLogos/Small/Bexley.gif" /></a>
+                        </p>                      
                     </div>
                 </div>
                 <p class="center">Areas covered:<br>Abbey Wood, Barnehurst, Belvedere, Bexley, Bexleyheath, Blackheath, Bromley, Chislehurst, Crayford, Deptford, Erith, Greenwich, Lewisham, Northumberland Heath, Plumstead, Sidcup, Thamesmead, Welling, Woolwich and surrounding areas.</p>
