Various SEO improvements

--- a/website-design.html
+++ b/website-design.html
@@ -12,14 +12,14 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Website Design | Erith Bexley South East London | Sybiltec</title>       
-        <meta name="Description" content="Designing a beautiful website is of utmost importance for a strong online presence. Learn about Sybil Mayard's custom website design service for SMEs here.">
+        <title>Website Design in Bexley London for Small Businesses | Sybiltec</title>       
+        <meta name="Description" content="Small businesses in Bexley and surrounding areas can benefit from bespoke web design services offered by Sybiltec. Contact me today for a free consultation.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/website-design">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Website Design | Erith Bexley South East London | Sybiltec" />
-        <meta property="og:description" content="Designing a beautiful website is of utmost importance for a strong online presence. Learn about Sybil Mayard's custom website design service for SMEs here." />
+        <meta property="og:title" content="Website Design in Bexley London for Small Businesses | Sybiltec" />
+        <meta property="og:description" content="Small businesses in Bexley and surrounding areas can benefit from bespoke web design services offered by Sybiltec. Contact me today for a free consultation." />
         <meta property="og:url" content="https://sybiltec.com/website-design" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -68,14 +68,14 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Website Design</h1>
+                <h1>Small Business Website Design</h1>
                 <h2>A Fully-Customised Design for Your Website</h2>
             </div>
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
                 <h2>The Service</h2>
-                <p>Are you looking for a <strong>web designer</strong> in <strong>Bexley</strong> or the surrounding areas? If so, then you've come to the right place! Your website may be in need of a refresh. Or, perhaps you have little or no online presence and you want to build your first website. Either way, my website design service would be perfect for you.</p>
+                <p>Are you looking for a <strong>web designer</strong> in <strong>Bexley</strong> or other areas within South East London? If so, then you've come to the right place! Your website may be in need of a refresh. Or, perhaps you have little or no online presence and you want to build your first website. Either way, my website design service would be perfect for you.</p>
 
                 <h3>Benefits of My Web Design Service</h3>
                 <ul>
@@ -86,6 +86,16 @@
 
                 <h2>The Process</h2>
                 <p>Your requirements will be gathered and we will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. I will present the website designs to you either via a Figma link, or I will send you the JPEG images attached to an email. Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (Wix, WordPress or Shopify). For more information about the web design process, please refer to my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a>.</p>
+
+                <h2>Why You Need a Website</h2>
+
+                <p>A website is an essential tool for every small (and large) business nowadays. Here are a few reasons why:</p>
+                    <ul>
+                        <li>Every day, billions of searches are carried out on search engines by people who are looking for businesses like yours. You won't want to miss out on the opportunity to be found on search</li>
+                        <li>Customers are more likely to purchase from a business with a website</li>
+                        <li>A website builds trust and demonstrates credibility</li>
+                        <li>You have full control over the look and feel of your website, unlike your profile on social media platforms.</li>
+                    </ul>
 
                 <p>Take a look at the examples below of websites I have designed for past clients.</p>
 
@@ -271,7 +281,7 @@
                 </div>
 
                 <div class="padding-bottom">
-                    <h2>Why You Need a Website</h2>
+                    <h2>A Message from Sybil</h2>
                     <div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/DY-LbcK8Pf4?si=4LhzHk2A6KqWVqJw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
                 </div>
 
