--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Design for SMEs | Bexley, South East London | Sybiltec</title>       
+        <title>Web Design for Small Businesses | South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Web Design for SMEs | Bexley, South East London | Sybiltec" />
+        <meta property="og:title" content="Web Design for Small Businesses | South East London | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation." />
         <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltec" />
