Schema markup for LocalBusiness and Organization

--- a/shopify-woocommerce.html
+++ b/shopify-woocommerce.html
@@ -52,6 +52,66 @@
         <meta name="geo.placename" content="London" />
         <meta name="geo.position" content="51.495673;0.141465" />
         <meta name="ICBM" content="51.495673, 0.141465" />
+        <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "image": "https://sybiltec.com/images/logos/sybiltec-logo-social.png",
+        "name": "Sybiltec",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "2 Veridion Way",
+            "addressLocality": "Bexley",
+            "addressRegion": "London",
+            "postalCode": "DA18 4AL",
+            "addressCountry": "GB"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 51.495673,
+            "longitude": 0.141465
+        },
+        "url": "https://sybiltec.com",
+        "telephone": "+447768059730",
+        "priceRange": "$$",
+        "openingHoursSpecification": [
+            {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+                "Monday",
+                "Tuesday",
+                "Wednesday",
+                "Thursday",
+                "Friday"
+            ],
+            "opens": "09:00",
+            "closes": "18:00"
+            }
+        ]
+        }
+        </script>
+        <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "image": "https://sybiltec.com/images/logos/sybiltec-logo-social.png",
+        "url": "https://www.sybiltec.com",
+        "sameAs": ["https://www.instagram.com/sybiltec/", "https://www.facebook.com/sybiltec", "https://www.linkedin.com/company/sybiltec/"],
+        "logo": "https://sybiltec.com/favicon.png",
+        "name": "Sybiltec",
+        "description": "Sybiltec provides web design services to small businesses in the South East London region and surrounding areas. Whether you are looking to build your first website or redesign an existing one, we offer a service that's right for you. Services include: small business websites, e-commerce websites and online learning platforms. We work with Shopify, WordPress, Wix, WooCommerce and LearDash.",
+        "email": "info@sybiltec.com",
+        "telephone": "+447768059730",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "2 Veridion Way",
+            "addressLocality": "Bexley",
+            "addressCountry": "GB",
+            "addressRegion": "London",
+            "postalCode": "DA18 4AL"
+        }
+        }
+        </script>
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
