--- a/accessible-website-design.html
+++ b/accessible-website-design.html
@@ -154,6 +154,8 @@
 
                 <p>For more information, take a look at the <a href="https://www.w3.org/TR/WCAG21/" target="_blank" rel="noopener noreferrer">Web Content Accessibility Guidelines (WCAG) 2.1</a>, a detailed set of recommendations on how to improve the accessibility of web content.</p>
 
+                <p>A useful checklist can also be found on the <a href="https://www.a11yproject.com/checklist/" target="_blank" rel="noopener noreferrer">A11Y Project</a> website.</p>
+
                 <p>If you are looking to improve the accessibility of your website, please feel free to <a href="https://sybiltec.com/contact">contact me</a>.</p>
             </div>
         </div>
